@@ -1,4 +1,4 @@
-$Id: CHANGELOG,v 1.32 1997-04-30 07:26:05 adam Exp $
+$Id: CHANGELOG,v 1.33 1997-05-01 15:03:58 adam Exp $
 
 06/19/95 Release of ir-tcl-1.0b
 ------------------------------------------------------
@@ -119,3 +119,5 @@ $Id: CHANGELOG,v 1.32 1997-04-30 07:26:05 adam Exp $
 04/13/97 Added ir-log-init command.
 
 04/30/97 Added shared library support.
+
+05/01/97 Added ir-log command.
